[project]
name = "websocket"
version = "0.1.0"
description = ""
authors = [
    {name = "Manuel Di Nardo"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "websockets (>=16.0,<17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = []
package-mode = false
